refactor(ops): converge sustainment renderer